Minor alignment fix for TubeStatus

--- a/src/components/TubeStatus/styles.scss
+++ b/src/components/TubeStatus/styles.scss
@@ -8,6 +8,7 @@ div.line-info {
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
+  align-items: center;
 }
 
 .line-info h4 {
